# algokit_default_template

./: .env.example  .eslintignore  .gitignore  Dockerfile  README.md  algob.config.ts  copier.yaml  jest.config.ts  package.json  poetry.toml  pyproject.toml  release_notes.txt
.circleci/: config.yml
.github/workflows/: cd.yaml  check-python.yaml
assets/: main_approval.py  main_clear.py  vote_verify_lsig.py  voting_approval.py
assets/abi/: voting-contract.json
assets/default_consumer/: build.py  defaultConsumerUtils.ts  default_consumer.py  key_map.py
assets/helpers/: key_map.py  pyteal_functions.py  z_table.json
assets/stake_delegator/: README.txt  abi_structures.py  abi_structures.ts
assets/transactions/: main_transactions.ts  misc_transactions.ts  request_transactions.ts  staking_transactions.ts  vote_transactions.ts
assets/vesting/: abi_structures.py  abi_structures.ts  build.py  vesting.py  vestingUtils.ts
examples/echo/test/: example.e2e.ts
scripts/: 1-deployIndexerContract.ts
scripts/task/: callWhitelist.ts  createPriceList.ts  writeIndexerValues.ts  writeValue.ts
template_content/: .env.template  .gitattributes  .gitignore  README.md  pyproject.toml  {{ _copier_conf.answers_file }}.jinja
template_content/default_app/: README.md  Smart Contract API.md  abi_structures.py  build.py  default_app.py  demo.py  feed_examples.json  utils.py
template_content/playground/abi/: application.py  array_blueprint.py  demo.py  named_tuple_blueprint.py
template_content/playground/blueprint/: application.py  calculator_blueprint.py  demo.py
template_content/playground/boxes/: README.md  application.py  demo.py
template_content/playground/contract_to_contract/: application.py  build.py  demo.py
template_content/playground/default_app/: build.py  default_app.py  helloworld.py
template_content/playground/hello_world/: build.py  demo.py  helloworld.py
template_content/playground/state/: README.md  application.py  demo.py
template_content/protocol/: .eslintrc  Pipfile  README.md  cli.ts  tsconfig.json
template_content/protocol/assets/: accounts_sandbox.yaml  main_approval.py  smart_assert_errors.json  voting_approval.py  voting_clear.py
template_content/protocol/assets/abi/: main-contract.json
template_content/protocol/assets/default_consumer/: abi_structures.py  abi_structures.ts  default_consumer.py
template_content/protocol/assets/default_consumer/test/: default_consumer.e2e.ts
template_content/protocol/assets/helpers/: use_oracle.py  voting_base.py  z_table.py
template_content/protocol/assets/stake_delegator/: README.txt  build.py  delegatorUtils.ts  key_map.py  stake_delegator.py
template_content/protocol/assets/stake_delegator/test/: MockMain.py  stakedelegator.e2e.ts  stakedelegator_Mock.e2e.ts
template_content/protocol/assets/transactions/: main_transactions.ts  staking_transactions.ts  vote_transactions.ts
template_content/protocol/assets/vesting/: README.txt
template_content/protocol/assets/vesting/test/: vesting.e2e.ts
template_content/protocol/examples/echo/assets/abi/: main-contract.json
template_content/protocol/examples/echo/assets/transactions/: main_transactions.ts
template_content/protocol/examples/mock_vote/assets/abi/: voting-passthrough-contract.json
template_content/protocol/examples/mock_vote/assets/helpers/: key_map.py
template_content/protocol/examples/price_predictor_dapp/assets/helpers/: key_map.py
template_content/protocol/examples/price_predictor_dapp/assets/transactions/: example_data_transactions.ts  example_transactions.ts
template_content/protocol/scripts/: 0-deployPriceOracle.ts
template_content/protocol/scripts/task/: updatePriceOracle.ts
template_content/protocol/test/e2e/: cli.e2e.ts  inner_test.e2e.ts
template_content/protocol/test/e2e/stake/: stake.e2e.ts  stake.preInit.e2e.ts  stake.preOptIn.e2e.ts
template_content/protocol/test/e2e/vote/: vote.accounts.e2e.ts  vote.contract.e2e.ts  vote.votinglogic.e2e.ts
template_content/protocol/test/test_fixtures/: accounts.json  consumer-contract.json  consumer_transactions.ts  inner_test_clear.py
template_content/protocol/test/util/: utils.ts
template_content/protocol/utils/: abi_types.py  gora_utils.ts
test/e2e/: cli.e2e.ts  inner_test.e2e.ts  main_common.ts  request.e2e.ts
test/test_fixtures/: consumer_approval.py  generate_account.ts  inner_test-contract.json  inner_test_approval.py  inner_test_transactions.ts
test/util/: utils.ts
tests/: test_templates.py
utils/: abi_types.ts  beaker_test_utils.ts  gora_pyteal_utils.py
(+33 files in other folders)
