# Python project configuration - https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/
[tool.poetry]
name = "goracle"
version = "0.1.0"
description = "Default basic app to interact with the Goracle protocol"
authors = ["Jesse <https://github.com/TonyIommiSG>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
beaker-pyteal = "^1.0.0"
algokit-utils = "^1.0.1"
python-dotenv = "^1.0.0"
typing = "*"
pyyaml = "*"
scipy = "*"
pycryptodome = "*"
